shift-reduce/y.output
State 1 conflicts: 1 shift/reduce


Grammar

    0 $accept: s $end

    1 s: list

    2 list: x
    3     | list x

    4 x: A
    5  | A B P
    6  | B Q


Terminals, with rules where they appear

$end (0) 0
error (256)
A (258) 4 5
B (259) 5 6
P (260) 5
Q (261) 6


Nonterminals, with rules where they appear

$accept (7)
    on left: 0
s (8)
    on left: 1, on right: 0
list (9)
    on left: 2 3, on right: 1 3
x (10)
    on left: 4 5 6, on right: 2 3


state 0

    0 $accept: . s $end

    A  shift, and go to state 1
    B  shift, and go to state 2

    s     go to state 3
    list  go to state 4
    x     go to state 5


state 1

    4 x: A .
    5  | A . B P

    B  shift, and go to state 6

    B         [reduce using rule 4 (x)]
    $default  reduce using rule 4 (x)


state 2

    6 x: B . Q

    Q  shift, and go to state 7


state 3

    0 $accept: s . $end

    $end  shift, and go to state 8


state 4

    1 s: list .
    3 list: list . x

    A  shift, and go to state 1
    B  shift, and go to state 2

    $default  reduce using rule 1 (s)

    x  go to state 9


state 5

    2 list: x .

    $default  reduce using rule 2 (list)


state 6

    5 x: A B . P

    P  shift, and go to state 10


state 7

    6 x: B Q .

    $default  reduce using rule 6 (x)


state 8

    0 $accept: s $end .

    $default  accept


state 9

    3 list: list x .

    $default  reduce using rule 3 (list)


state 10

    5 x: A B P .

    $default  reduce using rule 5 (x)
